Add scribe-maven-plugin